# advent

./: .gitignore  LICENSE
2024/: 1.idr  2.idr  3.idr
2025/: Day1.hs  Day2.hs  Day3.hs  Main.hs  Utils.hs  advent.cabal
