cabal-version:      3.0
name:               advent
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Roland Yang
maintainer:         roland.yang@unc.edu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day1
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   .
    default-language: Haskell2010

executable advent
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    default-extensions: ExistentialQuantification
    build-depends:
        base ^>=4.21.0.0,
        advent

    hs-source-dirs:   .
    default-language: Haskell2010
