cabal-version:      3.0
name:               advent
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Roland Yang
maintainer:         roland.yang@unc.edu
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day1, Day2, Day3, Utils
    -- other-modules:
    -- other-extensions:
    default-extensions: OverloadedStrings, PatternSynonyms
    build-depends:
        base ^>=4.21.0.0,
        text ^>=2.1.0,
        containers ^>=0.8,
    hs-source-dirs:   .
    default-language: Haskell2010

executable advent
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1, Day2, Day3, Utils
    default-extensions: ExistentialQuantification, OverloadedStrings
    build-depends:
        base ^>=4.21.0.0,
        text ^>=2.1.0,
        containers ^>=0.8,
        advent

    hs-source-dirs:   .
    default-language: Haskell2010
